# apx_photoplanner

./: .clang-format  .gitignore  all.pro  apx_photoplanner.pro  meson.build  photoplanedit.cpp  photoplanedit.h  photoplanner.cpp  photoplanner.h  points.cpp  points.h  stuff.qrc
qml/: PhotoplannerItem.qml  PhotoplannerMapItems.qml  PhotoplannerPlugin.qml
src/math/: AreaPhotoPlanner.cpp  AreaPhotoPlanner.h  AreaPhotoPrintsGenerator.cpp  AreaPhotoPrintsGenerator.h  Array2d.h  Azimuth.h  LinePhotoPrintsGenerator.cpp  LinePhotoPrintsGenerator.h  LinearPhotoPlanner.cpp  LinearPhotoPlanner.h  LinearPhotoPrintsGenerator.cpp  LinearPhotoPrintsGenerator.h  LinedGeoPoints.cpp  LinedGeoPoints.h  ManeuverTrackAlignment.cpp  ManeuverTrackAlignment.h  NearFilter.h  PhotoCameraModel.cpp  PhotoCameraModel.h  PhotoGeoCalcs.cpp  PhotoGeoCalcs.h  PhotoPlanner.cpp  PhotoPlanner.h  PhotoPlannerCore.cpp  PhotoPlannerCore.h  PhotoPlannerXmlWriter.cpp  PhotoPlannerXmlWriter.h  PhotoUavModel.cpp  PhotoUavModel.h  meson.build
src/photoplanner_math/: AreaPhotoPlanner.h  AreaPhotoPrintsGenerator.h  Array2d.h  Azimuth.h  LinePhotoPrintsGenerator.h  LinearPhotoPlanner.h  LinearPhotoPrintsGenerator.h  LinedGeoPoints.h  ManeuverTrackAlignment.h  NearFilter.h  PhotoCameraModel.h  PhotoGeoCalcs.h  PhotoPlanner.h  PhotoPlannerCore.h  PhotoPlannerXmlWriter.h  PhotoPrintsGenerators.h  PhotoUavModel.h  photoplanner_math.pro
src/photoplanner_plugin/: borderpoints.cpp  borderpoints.h  cameraanduavdata.cpp  cameraanduavdata.h  cameraedit.cpp  cameraedit.h  photoplanner.cpp  photoplanner.h  photoplanner_plugin.pro  photoplanneredit.cpp  photoplanneredit.h  photoplannerplugin.cpp  photoplannerplugin.h  photoprints.cpp  photoprints.h  planeredit.h  pointedit.cpp  pointedit.h  points.cpp  points.h  uavedit.cpp  uavedit.h
src/photoplanner_plugin/qml/: PhotoplannerMapItems.qml  PhotoplannerPlugin.qml
src/plugin/: borderpoints.cpp  borderpoints.h  cameraedit.h  meson.build  photoplanner.cpp  photoplanner.h  photoplannerplugin.h  photoprints.h  planeredit.cpp  planeredit.h  pointedit.h  stuff.qrc  uavedit.cpp  uavedit.h
src/plugin/qml/: PhotoplannerMapItems.qml
